--- a/anova.html
+++ b/anova.html
@@ -14,7 +14,7 @@
 <div class="main-body">
 <h1><center>An Introduction to ANOVA</center></h1>
 <p>Analysis of variance, or ANOVA, is a statistical technique to find if there is significant difference or change between means of two or many comparison groups.</p>
-<p>There are various types of ANOVA tests, the common ones are: One-Way ANOVA, Two-Way ANOVA and N-Way ANOVA. One-Way ANOVA is used to test differences between groups based one independent variable. Two-Way ANOVA is used when there are two independent variables. N-Way ANOVA, you can guess from its name, is used when there are more than two independent variables.</p>
+<p>There are various types of ANOVA tests, the common ones are: One-Way ANOVA, Two-Way ANOVA and N-Way ANOVA. One-Way ANOVA is used to test differences between groups based on one independent variable. Two-Way ANOVA is used when there are two independent variables. N-Way ANOVA, you can guess from its name, is used when there are more than two independent variables.</p>
 <p>ANOVA tests the null hypothesis:
 <ul>
 <li>H<sub>0</sub>: All the sample means between groups are equal</li>
