--- a/anova.html
+++ b/anova.html
@@ -212,7 +212,7 @@ The alternative hypothesis is:
   <dd><math><msub><mi>X</mi><mrow><mi>i</mi><mi>j</mi></msub></math> is individual observation.</dd>
   <dd><math><msub><mi>X&#x0305;</mi><mi>j</mi></msub></math> is sample mean of the j<sup>th</sup> group.</dd>
   <dd><math><mi>X&#x0305;</mi></math> is overall sample mean.</dd>
-  <dd><math><mi>k</mi></math> is the number of independent comparison group.</dd>
+  <dd><math><mi>k</mi></math> is the number of independent comparison groups.</dd>
   <dd><math><msub><mi>n</mi><mi>j</mi></msub></math> is the number of observations or sample size in j<sup>th</sup> group.</dd>
   <dd><math><mi>n</mi></math> is total number of observations or total sample size.</dd>
 </dl>
