--- a/postgres/postgres.html
+++ b/postgres/postgres.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="../data-anal.css">
-  <title>PostgreSQL Database</title>
+  <title>Build PostgreSQL Database</title>
 </head>
 <body>
 <div class="banner">
   <img src="../anova.jpg" alt="banner" style="width: 100%;" />
   <div class="banner-logo"><img src="../logo82.jpg" alt="logo" style="width: 82px; height: 82px;" /><span class="logo-text">Jin's Site</span></div>
-  <div class="banner-title">Build PostgreSQL Database</div>
+  <div class="banner-title">PostgreSQL Database</div>
 </div>
 <div class="main-body">
 <h1><center>Build A PostgreSQL Database</center></h1>
