--- a/postgres/postgres.html
+++ b/postgres/postgres.html
@@ -145,5 +145,6 @@ mydb=# \l
 (3 rows)</code></pre>
 <p>Notice that the prompt has been changed to "mydb=#" and remember next time you should use mydb to connect to the database server:</p>
 <pre><code>$ psql -d mydb</code></pre>
+<p>&copy; 2023 Jin's Site. All Rights Reserved. <a href="https://jinssite.github.io">https://jinssite.github.io</a></p>
 </body>
 </html>
