--- a/analysis/anova.html
+++ b/analysis/anova.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="data-anal.css">
+  <link rel="stylesheet" href="../data-anal.css">
   <title>ANOVA</title>
 </head>
 <body>
 <div class="banner">
-  <img src="anova.jpg" alt="banner" style="width: 100%;" />
-  <div class="banner-logo"><img src="logo82.jpg" alt="logo" style="width: 82px; height: 82px;" /><span class="logo-text">Jin's Site</span></div>
+  <img src="../anova.jpg" alt="banner" style="width: 100%;" />
+  <div class="banner-logo"><img src="../logo82.jpg" alt="logo" style="width: 82px; height: 82px;" /><span class="logo-text">Jin's Site</span></div>
   <div class="banner-title">ANOVA</div>
 </div>
 <div class="main-body">
