--- a/analysis/anova.html
+++ b/analysis/anova.html
@@ -231,7 +231,7 @@ The alternative hypothesis is:
 <p>Usually we need a small p-value to safely reject the null hypothesis. A typical level used is 0.05, which means, on average, a 1 in 20 chance that we reject the null hypothesis when it is in fact true.</p>
 <p class="comments"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScwccPtS-BgcFogAjpXijWl4MOvACF1wbCMYSyzw4-aIGRRdQ/viewform?embedded=true" width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
 <div>
-<a href="index.html" class="page-prev">&lt; Previous</a> <a href="using-anova.html" class="page-next">Next &gt;</a>
+<a href="data-anal.html" class="page-prev">&lt; Previous</a> <a href="using-anova.html" class="page-next">Next &gt;</a>
 </div>
 </div>
 </body>
