--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 </div>
 <div class="main-body">
 <topics><p>Welcome to Jin's site at GitHub, a site to show the topics that we are interested in. Please follow each link to see the topic.</p></topics>
-<p class="topic"><a class="topic-link" href="data-anal.html">Data Analysis</a><br><span class="subtopic">ANOVA, Javascript</span></p>
-<p class="topic"><a class="topic-link" href="postgres.html">PostgreSQL Database</a></p>
+<p class="topic"><a class="topic-link" href="analysis/data-anal.html">Data Analysis</a><br><span class="subtopic">ANOVA, Javascript</span></p>
+<p class="topic"><a class="topic-link" href="postgres/postgres.html">PostgreSQL Database</a></p>
 </div>
 </body>
 </html>
