--- a/analysis/anova.html
+++ b/analysis/anova.html
@@ -232,6 +232,7 @@ The alternative hypothesis is:
 <p class="comments"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScwccPtS-BgcFogAjpXijWl4MOvACF1wbCMYSyzw4-aIGRRdQ/viewform?embedded=true" width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
 <div>
 <a href="data-anal.html" class="page-prev">&lt; Previous</a> <a href="using-anova.html" class="page-next">Next &gt;</a>
+<p>&copy; 2023 Jin's Site. All Rights Reserved. <a href="https://jinssite.github.io">https://jinssite.github.io</a></p>
 </div>
 </div>
 </body>
