--- a/postgres/postgres.html
+++ b/postgres/postgres.html
@@ -146,5 +146,6 @@ mydb=# \l
 <p>Notice that the prompt has been changed to "mydb=#" and remember next time you should use mydb to connect to the database server:</p>
 <pre><code>$ psql -d mydb</code></pre>
 <p>&copy; 2023 Jin's Site. All Rights Reserved. <a href="https://jinssite.github.io">https://jinssite.github.io</a></p>
+</div>
 </body>
 </html>
