--- a/analysis/anova.html
+++ b/analysis/anova.html
@@ -229,11 +229,13 @@ The alternative hypothesis is:
 </p>
 <p>Under these assumptions, the F ratio follows F statistic distribution. With the distribution, we can calculate the probability of observing an F-statistic that is at least as high as the value we obtained. This probability is known as the p-value and is the probability that we reject the null hypothesis when it is true.</p>
 <p>Usually we need a small p-value to safely reject the null hypothesis. A typical level used is 0.05, which means, on average, a 1 in 20 chance that we reject the null hypothesis when it is in fact true.</p>
+<footer>
+<p>&copy; 2023 Jin's Site. All Rights Reserved. <a href="https://jinssite.github.io">https://jinssite.github.io</a></p>
+</footer>
 <p class="comments"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScwccPtS-BgcFogAjpXijWl4MOvACF1wbCMYSyzw4-aIGRRdQ/viewform?embedded=true" width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
 <div>
 <a href="data-anal.html" class="page-prev">&lt; Previous</a> <a href="using-anova.html" class="page-next">Next &gt;</a>
 </div>
-<p>&copy; 2023 Jin's Site. All Rights Reserved. <a href="https://jinssite.github.io">https://jinssite.github.io</a></p>
 </div>
 </body>
 </html>
