--- a/analysis/using-anova.html
+++ b/analysis/using-anova.html
@@ -55,6 +55,9 @@
 <div id="anova-charts"></div>
 <div id="anova-div"></div>
 <div id="post-hoc"></div>
+<footer>
+<p>&copy; 2023 Jin's Site. All Rights Reserved. <a href="https://jinssite.github.io">https://jinssite.github.io</a></p>
+</footer>
 <p class="comments"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSerA-U3BCBRtsrdkySiJlNmBDPRQknP4NIOCTaqvvhuVejsdA/viewform?embedded=true" width="640" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
 <div>
 <a href="anova.html" class="page-prev">&lt; Previous</a>
