--- a/postgres/postgres.html
+++ b/postgres/postgres.html
@@ -148,6 +148,9 @@ mydb=# \l
 <footer>
 <p>&copy; 2023 Jin's Site. All Rights Reserved. <a href="https://jinssite.github.io">https://jinssite.github.io</a></p>
 </footer>
+<div>
+<a href="codespace.html" class="page-prev">&lt; Previous</a>
+</div>
 </div>
 </body>
 </html>
