--- a/postgres/postgres.html
+++ b/postgres/postgres.html
@@ -149,7 +149,7 @@ mydb=# \l
 <p>&copy; 2023 Jin's Site. All Rights Reserved. <a href="https://jinssite.github.io">https://jinssite.github.io</a></p>
 </footer>
 <div>
-<a href="codespace.html" class="page-prev">&lt; Previous</a>
+<a href="codespace.html" class="page-prev">&lt; Previous</a><a href="stock-tables.html" class="page-next">Next &gt;</a>
 </div>
 </div>
 </body>
