--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       color: black;
     }
     .subtopic {
+      display: block;
       font-size: 0.5em;
+      line-height: 120%;
     }
   </style>
   <title>Jin's Site</title>
@@ -37,7 +39,7 @@
 <div class="main-body">
 <topics><p>Welcome to Jin's site at GitHub, a site to show the topics that we are interested in. Please follow each link to see the topic.</p></topics>
 <p class="topic"><a class="topic-link" href="analysis/data-anal.html">Data Analysis<br><span class="subtopic">ANOVA, Javascript</span></a></p>
-<p class="topic"><a class="topic-link" href="postgres/codespace.html">PostgreSQL Database<br><span class="subtopic">codespace, Docker, build database</span></a></p>
+<p class="topic"><a class="topic-link" href="postgres/codespace.html">PostgreSQL Database<br><span class="subtopic">codespace, Docker, build database, Python, C, libpq, psycopq2</span></a></p>
 </div>
 </body>
 </html>
