--- a/postgres/stock-tables.html
+++ b/postgres/stock-tables.html
@@ -121,7 +121,7 @@ def load_stock_data(symbol, conn):
 
 def main():
     """
-    Main function to load stock data into PostgreSQL data
+    Main function to load stock data into PostgreSQL database
     """
     config = {"host": "localhost", "dbname": "mydb", "user": "codespace", "port": "5432"}
 
