--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <topics><p>Welcome to Jin's site at GitHub, a site to show the topics that we are interested in. Please follow each link to see the topic.</p></topics>
 <p class="topic"><a class="topic-link" href="analysis/data-anal.html">Data Analysis<br><span class="subtopic">ANOVA, Javascript</span></a></p>
 <p class="topic"><a class="topic-link" href="postgres/codespace.html">PostgreSQL Database<br><span class="subtopic">codespace, Docker, build database, Python, C, libpq, psycopq2</span></a></p>
+<p class="topic"><a class="topic-link" href="mysql/mysql.html">MySQL Database<br><span class="subtopic">build database, Python, Connector/Python</span></a></p>
 </div>
 </body>
 </html>
